[package]
name = "mlkem_chacha20poly1305_example"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = "0.5.2"
base64 = "0.22.1"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
pqcrypto-mlkem = {version = "0.1.0", features = ["serialization"]}
pqcrypto-traits = "0.3.5"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
